tests/rosetta/out/Zig/bitmap-flood-fill.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenbitmap-flood-fill1568531552/001/prog.zig:5:67: error: use of undeclared identifier 'handleError'
/tmp/TestMochiZigGoldenbitmap-flood-fill1568531552/001/prog.zig:59:9: error: use of undeclared identifier 'ff'
